# drawscaffold_script

./: .gitignore  README.md  main.py  project_1.dxf  project_1768931245.141983.dxf  project_1768931331.775985.dxf  project_1768931334.344668.dxf  project_1768939915.dxf  project_1768940004.dxf  project_1768940027.dxf  project_1768940036.dxf  project_1768970587.dxf  project_2.dxf  pyproject.toml  top_down_main.py
drawscaffold/: calculate.py  calculate_top_down.py  drawer.py  drawer3d.py  drawer_top_down.py
drawscaffold/calculator/: calculator_2d.py  calculator_top_down.py  price_calculator.py
drawscaffold/const/: conts.py  top_down_enum.py
drawscaffold/diagonal/: diagnoal_drawer.py
drawscaffold/diagonal/patterns/: x_pattern.py  zigzag_pattern.py
drawscaffold/shapes/: shapes_2d.py  shapes_top_down.py
drawscaffold/utils/: debug_printer.py
tests/: test_top_down_main.py
