[project]
name = "drawscaffold"
version = "0.1.0"
description = ""
authors = [
    {name = "yesilOguz",email = "oguzyesil17@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ezdxf (>=1.4.2,<2.0.0)",
    "matplotlib (>=3.10.5,<4.0.0)",
    "cairosvg (>=2.8.2,<3.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
